--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   flutter_credit_card: ^3.0.4
   rflutter_alert: ^2.0.4
   another_stepper: ^1.1.6
+  pie_chart: ^5.3.2
+  encrypt: ^5.0.1
+
 
 dev_dependencies:
   flutter_test:
